--- a/styles/section.css
+++ b/styles/section.css
@@ -59,6 +59,12 @@ text-align: center;
         width: 20px;
         height: 20px;
       }
+      &:hover {
+        transform: translateY(-6px) scale(1.02);
+        box-shadow: 0 12px 24px rgb(0, 0, 0);
+        cursor: pointer;
+        border: 1px solid rgb(106, 105, 105);
+      }
     
   }
 
@@ -115,6 +121,7 @@ text-align: center;
    padding: 0px;
    gap: 24px;
     
+  
 
     .card {
       display: flex;
@@ -125,6 +132,7 @@ text-align: center;
       background: var(--gray-300);
       border-radius: 12px;
       text-align: left;
+
 
       img {
         width: 306px;
@@ -143,6 +151,13 @@ text-align: center;
         font: var(--text-sm-Maven);
         color: var(--gray-500);
       }
+       &:hover {
+        transform: translateY(-6px) scale(1.02);
+        box-shadow: 0 12px 24px rgb(83, 83, 83);
+        cursor: pointer;
+        border: 1px solid rgb(255, 255, 255);
+      }
+      
     }
   }
 }
@@ -210,6 +225,8 @@ height: 61px;
   align-items: center;
   padding: 128px 120px 200px 120px;
   gap: 48px;
+
+  
 }
 
 .my-contact {
@@ -267,4 +284,36 @@ height: 61px;
 .box-contacts img:last-child {
   width: 16px;
   height: 16px;
+}
+
+.box-contacts:hover {
+  border: 1px solid #4ea8de; 
+  background-color: #2c2c2e; 
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+  cursor: pointer;  
+  
+}
+.boxD-contacts .box-contacts:nth-child(1):hover a {
+  color: #0a66c2; 
+}
+.boxD-contacts .box-contacts:nth-child(2):hover a  {
+  color: #e1306c; 
+}
+.boxD-contacts .box-contacts:nth-child(3):hover a {
+  color: #ffffff; 
+}
+.boxD-contacts .box-contacts:nth-child(4):hover a {
+  color: #ffb300; 
+}
+.boxD-contacts .box-contacts:nth-child(1):hover img:first-of-type {
+  content: url(../assets/Icons/MyWork/colored/Vector.png);
+}
+.boxD-contacts .box-contacts:nth-child(2):hover img:first-of-type {
+  content: url(../assets/Icons/MyWork/colored/instagram.png);
+}
+.boxD-contacts .box-contacts:nth-child(3):hover img:first-of-type {
+  content: url(../assets/Icons/MyWork/colored/github.png);
+}
+.boxD-contacts .box-contacts:nth-child(4):hover img:first-of-type {
+  content: url(../assets/Icons/MyWork/colored/o-email.png);
 }
